--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@ document.addEventListener("DOMContentLoaded", () => {
   iframe.loading = "lazy";
   iframe.allowFullscreen = "";
   iframe.referrerPolicy = "no-referrer-when-downgrade";
-  iframe.src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.232308192542!2d127.0360562765073!3d37.52034132729725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca3905b4c6cf9%3A0x37c1c4ebf7c646f2!2z64yA7YWM7LKc7ZSE7JWE7Iqk7Yq4!5e0!3m2!1sko!2skr!4v1731234567890!5m2!1sko!2skr";
+  iframe.src =
+  "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.236749332844!2d127.03864727650718!3d37.52035532729685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca392b80f8d91%3A0xdda2a50f3c5b1e1b!2z64yA7YWM7LKc7ZSE7JWE7Iqk7Yq4!5e0!3m2!1sko!2skr!4v1731234567890!5m2!1sko!2skr";
   mapContainer.innerHTML = "";
   mapContainer.appendChild(iframe);
 });
