--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>병권 ♥ 라희 모바일 청첩장</title>
 <meta name="description" content="우리의 결혼 소식을 전합니다.">
 <meta property="og:title" content="병권 ♥ 라희 결혼합니다">
-<meta property="og:description" content="일시 · 장소 · 오시는 길">
+<meta property="og:description" content="2026년 8월 8일(토) 오후 4시 더채플앳청담 채플홀">
 <meta property="og:image" content="https://laheeee.github.io/wedding-invite/assets/cover.jpg">
 <meta property="og:type" content="website">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Cormorant+Garamond:wght@300;400;600;700&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
