--- a/index.html
+++ b/index.html
@@ -249,19 +249,33 @@ document.addEventListener('touchstart',()=>{
   </div>
 </section>
 
+<!-- LOCATION (Google Maps Embed) -->
 <section id="location">
   <h2 style="text-align:center;">Location</h2>
-  <p class="sub" style="text-align:center">서울 강남구 선릉로 757 · 더채플앳청담 · 채플홀</p>
+  <p class="sub" style="text-align:center">
+    서울 강남구 선릉로 757 · 더채플앳청담 · 채플홀
+  </p>
 
-  <div id="map" style="width:100%;max-width:720px;height:400px;margin:20px auto;border-radius:16px;overflow:hidden;box-shadow:0 4px 18px rgba(0,0,0,0.1);"></div>
+  <!-- ✅ 구글맵 임베드 -->
+  <div style="width:100%;max-width:720px;height:400px;margin:20px auto;border-radius:16px;overflow:hidden;box-shadow:0 4px 18px rgba(0,0,0,0.1);">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.6226982270795!2d127.0363247756835!3d37.52035577206366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca3fefc8751f7%3A0x2b5f25dd5bce3c09!2z7YyM7YGs7J2067mE7Yq4IOyEseuPhOy5tOuTnCDtlZjrsJTsgrDroZw!5e0!3m2!1sko!2skr!4v1731234567890!5m2!1sko!2skr"
+      width="100%"
+      height="400"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
 
   <div class="btn-row">
-    <a class="btn" href="kakaomap://route?ep=37.520355,127.038647&by=CAR">카카오맵 길찾기</a>
-    <a class="btn" href="https://map.kakao.com/link/to/더채플앳청담,37.520355,127.038647" target="_blank">웹으로 보기</a>
+    <a class="btn" href="https://map.kakao.com/link/to/더채플앳청담,37.520355,127.038647" target="_blank">카카오맵</a>
     <a class="btn" href="https://naver.me/FYAJos4b" target="_blank">네이버지도</a>
     <a class="btn" href="https://goo.gl/maps/YJxvZ9R4y3b5iW6Y9" target="_blank">Google 지도</a>
   </div>
 </section>
+
 
 <section id="contact">
   <h2 style="text-align:center;">Contact</h2>
