--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@ h1{font-size:48px}h2{font-size:36px}h3{font-size:26px}
 /* HERO */
 .hero-card{background:#fff;border:1px solid #eee;border-radius:28px;box-shadow:0 6px 20px rgba(0,0,0,.06);overflow:hidden}
 .hero-top{text-align:center;padding:28px 22px 6px;}
-.eyebrow{font-family:"Cormorant Garamond",serif;font-size:14px;letter-spacing:.3em;color:var(--muted)}
+/*.eyebrow{font-family:"Cormorant Garamond",serif;font-size:14px;letter-spacing:.3em;color:var(--muted)}*/
+.eyebrow{
+  font-family:"Cormorant Garamond",serif;
+  font-size:clamp(10px, 2.8vw, 14px);  /* 화면폭에 따라 자동 크기 조정 */
+  letter-spacing:.3em;
+  color:var(--muted);
+  white-space:nowrap;                  /* 줄바꿈 방지 */
+  text-align:center;
+  display:block;
+}
 .oval{margin:16px auto 0;width:92%;aspect-ratio:4/5;border-radius:50%/56%;overflow:hidden;background:#f8f8f8;}
 .oval img{width:100%;height:100%;object-fit:cover}
 
